[package]
authors       = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description   = "Checker script runner for Ret2Shell - A feature-riches CTF challenge platform."
documentation = "https://docs.rs/ret2script"
edition       = "2021"
homepage      = "https://github.com/ret2shell/ret2script"
keywords      = ["ctf", "challenge", "rune", "script"]
license       = "MIT"
name          = "ret2script"
readme        = "./README.md"
repository    = "https://github.com/ret2shell/ret2script"
rust-version  = "1.89.0"
version       = "1.8.9"

[dependencies]
anyhow       = { version = "1.0", optional = true }
async-trait  = "0.1"
chrono       = "0.4"
clap         = { version = "4.5", features = ["derive"], optional = true }
hex          = "0.4"
nanoid       = "0.4"
once_cell    = "1.21"
owo-colors   = { version = "4.2", optional = true }
regex        = "1.12"
ring         = "0.17"
rune         = { version = "0.14", features = ["workspace", "tokio"] }
rune-modules = { version = "0.14", features = ["full"] }
serde        = { version = "1.0", features = ["derive"] }
thiserror    = "2.0"
tokio        = { version = "1.48", features = ["full"] }
tracing      = "0.1"

[features]
binary  = ["dep:clap", "dep:anyhow", "dep:owo-colors"]
default = ["binary"]

[lib]
path = "src/lib.rs"

[[bin]]
name              = "ret2script"
path              = "src/main.rs"
required-features = ["binary"]
